force-app/main/default/objects/QuoteLineItem/fields/iMC_Quote_Line_Item_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Quote_Line_Item_Record_ID__c</fullName>
    <label>iMC Quote Line Item Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>