force-app/main/default/objects/QuoteLineItem/fields/iMC_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>iMC_Total_Price__c</fullName>
    <formula>Quantity * Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>