force-app/main/default/objects/QuoteLineItem/fields/ListPriceDiscount__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscount__c</fullName>
    <description>This will calculate the discount given if the sales price is changed</description>
    <formula>(PricebookEntry.UnitPrice -(UnitPrice - (UnitPrice * Discount))) / ABS(PricebookEntry.UnitPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total item discount calculated by the product list price</inlineHelpText>
    <label>List Price Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>