force-app/main/default/objects/QuoteLineItem/fields/ModalityQuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>ModalityQuoteLineItem__c</fullName>
    <formula>CONTAINS(Product2.RecordType.DeveloperName, &#39;Modality&#39;)</formula>
    <label>Modality Quote Line Item</label>
    <type>Checkbox</type>
</CustomField>