force-app/main/default/objects/QuoteLineItem/fields/of_Quote_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>of_Quote_Line_Items__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Quote Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>