force-app/main/default/objects/QuoteLineItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>Text( Product2.Product_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>