force-app/main/default/objects/QuoteLineItem/fields/Quote_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Record_Type__c</fullName>
    <formula>Quote.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Record Type</label>
    <type>Text</type>
</CustomField>