force-app/main/default/objects/QuoteLineItem/fields/TOTAL_PRICE__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_PRICE__c</fullName>
    <formula>Quantity * UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL PRICE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>