force-app/main/default/objects/QuoteLineItem/fields/X2nd_Year_Price__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Year_Price__c</fullName>
    <formula>CASE( Year_2__c, 2, TOTAL_PRICE__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2nd Year Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>